--- a/about.html
+++ b/about.html
@@ -21,11 +21,11 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/iCoderBootstrap">Home</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link active" href="/about.html">About</a>
+                        <a class="nav-link" href="/iCoderBootstrap/about.html">About</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -45,7 +45,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact Us</a>
+                        <a class="nav-link" href="/iCoderBootstrap/contact.html">Contact Us</a>
                     </li>
 
                 </ul>
